[gd_scene load_steps=8 format=3 uid="uid://c50tmpcvmxq5r"]

[ext_resource type="Script" path="res://Script/Flashback1.gd" id="1_ayram"]
[ext_resource type="TileSet" uid="uid://bourpaof5g2kp" path="res://Scene/TileMap1.tres" id="1_yr65w"]
[ext_resource type="PackedScene" uid="uid://c8pnqpx6je86j" path="res://Entity/Player.tscn" id="2_626s5"]
[ext_resource type="PackedScene" uid="uid://pwml5qexebrb" path="res://Entity/teacher.tscn" id="4_hw80q"]
[ext_resource type="PackedScene" uid="uid://dbn1tyqrv4wqw" path="res://Entity/studentA.tscn" id="5_uoyt1"]
[ext_resource type="PackedScene" uid="uid://b683qgk41axb6" path="res://Entity/studentB.tscn" id="6_gufyp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2slm4"]
radius = 30.0

[node name="Flashback1" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ayram")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_yr65w")
format = 2
layer_0/name = "Ground"
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(0, 131074, 0, 65536, 131074, 0, 1, 131074, 0, 65537, 131074, 0, 131073, 131074, 0, 2, 131074, 0, 65538, 131074, 0, 131074, 131074, 0, 3, 131074, 0, 65539, 131074, 0, 131075, 131074, 0, 4, 131074, 0, 65540, 131074, 0, 131076, 131074, 0, 5, 131074, 0, 65541, 131074, 0, 131077, 131074, 0, 6, 131074, 0, 65542, 131074, 0, 131078, 131074, 0, 7, 131074, 0, 65543, 131074, 0, 131079, 131074, 0, 8, 131074, 0, 65544, 131074, 0, 131080, 131074, 0, 9, 131074, 0, 65545, 131074, 0, 131081, 131074, 0, 10, 131074, 0, 65546, 131074, 0, 131082, 131074, 0, 11, 131074, 0, 65547, 131074, 0, 131083, 131074, 0, 12, 131074, 0, 65548, 131074, 0, 131084, 131074, 0, 13, 131074, 0, 65549, 131074, 0, 14, 131074, 0, 65550, 131074, 0, 15, 131074, 0, 65551, 131074, 0, 131087, 131074, 0, 196620, 131074, 0, 262156, 131074, 0, 327692, 131074, 0, 262157, 131074, 0, 327693, 131074, 0, 262158, 131074, 0, 327694, 131074, 0, 262159, 131074, 0, 327695, 131074, 0, 196616, 131074, 0, 327688, 131074, 0, 196617, 131074, 0, 262153, 131074, 0, 327689, 131074, 0, 196618, 131074, 0, 262154, 131074, 0, 327690, 131074, 0, 196619, 131074, 0, 262155, 131074, 0, 327691, 131074, 0, 196608, 131074, 0, 262144, 131074, 0, 327680, 131074, 0, 196609, 131074, 0, 262145, 131074, 0, 327681, 131074, 0, 196610, 131074, 0, 262146, 131074, 0, 327682, 131074, 0, 196611, 131074, 0, 327683, 131074, 0, 196612, 131074, 0, 196613, 131074, 0, 262149, 131074, 0, 327685, 131074, 0, 327686, 131074, 0, 196615, 131074, 0, 327687, 131074, 0, 393216, 131074, 0, 458752, 131074, 0, 524288, 131074, 0, 393217, 131074, 0, 458753, 131074, 0, 524289, 131074, 0, 393218, 131074, 0, 458754, 131074, 0, 524290, 131074, 0, 393219, 131074, 0, 458755, 131074, 0, 524291, 131074, 0, 393220, 131074, 0, 458756, 131074, 0, 524292, 131074, 0, 393221, 131074, 0, 458757, 131074, 0, 524293, 131074, 0, 393222, 131074, 0, 458758, 131074, 0, 524294, 131074, 0, 393223, 131074, 0, 458759, 131074, 0, 524295, 131074, 0, 393224, 131074, 0, 458760, 131074, 0, 524296, 131074, 0, 393225, 131074, 0, 458761, 131074, 0, 524297, 131074, 0, 393226, 131074, 0, 458762, 131074, 0, 524298, 131074, 0, 393227, 131074, 0, 458763, 131074, 0, 524299, 131074, 0, 393228, 131074, 0, 458764, 131074, 0, 524300, 131074, 0, 393229, 131074, 0, 524301, 131074, 0, 393230, 131074, 0, 524302, 131074, 0, 393231, 131074, 0, 524303, 131074, 0, 16, 131074, 0, 65552, 131074, 0, 131088, 131074, 0, 17, 131074, 0, 65553, 131074, 0, 131089, 131074, 0, 18, 131074, 0, 65554, 131074, 0, 131090, 131074, 0, 19, 131074, 0, 65555, 131074, 0, 131091, 131074, 0, 327696, 131074, 0, 327697, 131074, 0, 196626, 131074, 0, 327698, 131074, 0, 196627, 131074, 0, 262163, 131074, 0, 327699, 131074, 0, 393232, 131074, 0, 458768, 131074, 0, 524304, 131074, 0, 393233, 131074, 0, 458769, 131074, 0, 524305, 131074, 0, 393234, 131074, 0, 458770, 131074, 0, 524306, 131074, 0, 393235, 131074, 0, 458771, 131074, 0, 524307, 131074, 0, 589833, 131074, 0, 589834, 131074, 0, 589842, 131074, 0, 589841, 131074, 0, 589840, 131074, 0, 589839, 131074, 0, 589838, 131074, 0, 589837, 131074, 0, 589836, 131074, 0, 589835, 131074, 0, 589843, 131074, 0, 589824, 131074, 0, 589825, 131074, 0, 589826, 131074, 0, 589827, 131074, 0, 589828, 131074, 0, 589829, 131074, 0, 589830, 131074, 0, 589831, 131074, 0, 589832, 131074, 0, 262147, 131074, 0, 262148, 131074, 0, 327684, 131074, 0, 196614, 131074, 0, 262150, 131074, 0, 262151, 131074, 0, 262152, 131074, 0, 131072, 131074, 0, 458765, 131074, 0, 458766, 131074, 0, 458767, 131074, 0, 262160, 131074, 0, 262161, 131074, 0, 262162, 131074, 0, 196625, 131074, 0, 196624, 131074, 0, 196623, 131074, 0, 196622, 131074, 0, 131086, 131074, 0, 131085, 131074, 0, 196621, 131074, 0)
layer_1/name = "Walls"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(65537, 2, 3, 65538, 262146, 4, 65539, 262146, 4, 65540, 262146, 4, 65541, 262146, 4, 65542, 262146, 4, 65543, 262146, 4, 65544, 262146, 4, 65545, 262146, 4, 65546, 262146, 4, 65547, 262146, 4, 65548, 262146, 4, 65549, 262146, 4, 65550, 262146, 4, 65551, 262146, 4, 65552, 262146, 4, 65553, 262146, 4, 65554, 65538, 3, 1, 65538, 5, 2, 65538, 5, 3, 65538, 5, 4, 65538, 5, 6, 65538, 5, 5, 65538, 5, 7, 65538, 5, 8, 65538, 5, 9, 65538, 5, 10, 65538, 5, 11, 65538, 5, 12, 65538, 5, 13, 65538, 5, 14, 65538, 5, 15, 65538, 5, 16, 65538, 5, 17, 65538, 5, 18, 65538, 5, 0, 458754, 0, 65536, 131074, 1, 131072, 131074, 1, 196608, 131074, 1, 262144, 131074, 1, 327680, 131074, 1, 393216, 131074, 1, 458752, 131074, 1, 524288, 131074, 1, 589824, 393218, 0, 589825, 65538, 1, 589827, 2, 1, 589828, 196610, 5, 589829, 196610, 5, 589830, 196610, 5, 589831, 196610, 5, 589832, 196610, 5, 589833, 196610, 5, 589834, 196610, 5, 589835, 196610, 5, 589836, 196610, 5, 589837, 196610, 5, 589838, 196610, 5, 589839, 196610, 5, 589840, 196610, 5, 589841, 196610, 5, 589842, 196610, 5, 589843, 327682, 0, 19, 65538, 0, 65555, 131074, 5, 131091, 131074, 5, 196627, 131074, 5, 262163, 131074, 5, 327699, 131074, 5, 393235, 131074, 5, 458771, 131074, 5, 524307, 131074, 5, 131090, 65538, 4, 131089, 262146, 5, 131088, 262146, 5, 131087, 262146, 5, 131086, 262146, 5, 131085, 262146, 5, 131084, 262146, 5, 131083, 262146, 5, 131082, 262146, 5, 131081, 262146, 5, 131080, 262146, 5, 131079, 262146, 5, 131078, 262146, 5, 131077, 262146, 5, 131076, 262146, 5, 131075, 262146, 5, 131074, 262146, 5, 131073, 2, 4, 655362, 196610, 5)
layer_2/name = "YSort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(196613, 458754, 2, 458757, 458754, 2, 196616, 458754, 2, 458760, 458754, 2, 196619, 458754, 2, 458763, 458754, 2, 196622, 458754, 2, 458766, 458754, 2, 196625, 458754, 2, 458769, 458754, 2, 196614, 196610, 9, 262150, 196610, 9, 458758, 196610, 9, 524294, 196610, 9, 196617, 196610, 9, 262153, 196610, 9, 458761, 196610, 9, 524297, 196610, 9, 196620, 196610, 9, 262156, 196610, 9, 458764, 196610, 9, 524300, 196610, 9, 262159, 196610, 9, 196623, 196610, 9, 458767, 196610, 9, 524303, 196610, 9, 458770, 196610, 9, 524306, 196610, 9, 262162, 196610, 9, 196626, 196610, 9, 65553, 196610, 0, 65542, 196610, 0, 131073, 327682, 1, 131074, 393218, 1, 131075, 327682, 1, 131076, 393218, 1)

[node name="Player" parent="." instance=ExtResource("2_626s5")]
position = Vector2(80, 302)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.462745, 0.0196078, 0.423529)

[node name="Teacher" parent="." instance=ExtResource("4_hw80q")]
position = Vector2(32, 161)

[node name="StudentA" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(189, 97)

[node name="StudentB" parent="." instance=ExtResource("6_gufyp")]
position = Vector2(381, 128)

[node name="StudentC" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(188, 224)

[node name="StudentD" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(189, 257)

[node name="StudentE" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(286, 129)

[node name="StudentF" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(478, 224)

[node name="StudentG" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(381, 256)

[node name="StudentH" parent="." instance=ExtResource("6_gufyp")]
position = Vector2(382, 99)

[node name="StudentI" parent="." instance=ExtResource("6_gufyp")]
position = Vector2(573, 225)

[node name="StudentJ" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(574, 259)

[node name="StudentK" parent="." instance=ExtResource("5_uoyt1")]
position = Vector2(477, 97)

[node name="Progress" type="Area2D" parent="."]
position = Vector2(-366, 330)

[node name="Collision" type="CollisionShape2D" parent="Progress"]
position = Vector2(573, -156)
shape = SubResource("CircleShape2D_2slm4")

[connection signal="body_entered" from="Progress" to="." method="_on_progress_body_entered"]
[connection signal="body_exited" from="Progress" to="." method="_on_progress_body_exited"]
